# OpenCV_examples

./: CMakeLists.txt  README.md
BasicCpp/: CMakeLists.txt  LoadAndSaveFile.cpp  LoadAndSaveFloatToFile.cpp
DisplayImages/: CMakeLists.txt  DisplayImage.cpp
ModifyImages/: CMakeLists.txt  ColorToGrey.cpp  GetROI.cpp  SaveAndLoad32FC1Image.cpp  SaveImage.cpp  load_float_image.py
