#****************************************************************************
# Copyright (C) 2018 Chenrui Lei
#
# THIS CODE AND INFORMATION ARE PROVIDED "AS IS" WITHOUT WARRANTY OF ANY
# KIND, EITHER EXPRESSED OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE
# IMPLIED WARRANTIES OF MERCHANTABILITY AND/OR FITNESS FOR A
# PARTICULAR PURPOSE.
#
#****************************************************************************
cmake_minimum_required(VERSION 2.8)
cmake_minimum_required(VERSION 2.8)

project( BasicCpp )

add_executable( LoadAndSaveFile LoadAndSaveFile.cpp)
add_executable( LoadAndSaveFloatToFile LoadAndSaveFloatToFile.cpp)
